--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+0.20.1 2010-4-7
+ * Added bson gem dependency.
+
 0.20 2010-4-7
 If upgrading from a previous version of the Ruby driver, please read these notes carefully,
 along with the 0.20_UPGRADE doc.
