--- a/README.rdoc
+++ b/README.rdoc
@@ -21,6 +21,15 @@ Here's a quick code sample. See the MongoDB Ruby Tutorial
 
 = Installation
 
+=== Ruby Versions
+
+The driver works and is consistently tested on Ruby 1.8.6, 1.8.7, and 1.9.1.
+
+Note that if you're on 1.8.7, be sure that you're using a patchlevel >= 249. There
+are some IO bugs in earlier versions.
+
+=== Gems
+
 The driver's gems are hosted at Rubygems.org[http://rubygems.org]. Make sure you're
 using the latest version of rubygems:
 
